--- a/sweeps/experiments.yaml
+++ b/sweeps/experiments.yaml
@@ -4,7 +4,7 @@ name: all-experiments
 method: grid
 parameters:
   dataset:
-    values: [implicit_hate]
+    values: [offenseval_implicit]
   model:
     values: [llama, hatebert, gpt-2]
 command:
