try vicuna model

--- a/configs/defaults.yaml
+++ b/configs/defaults.yaml
@@ -3,10 +3,10 @@ basic:
   device_map: auto
   offload_folder: ./offload
   output_dir: results
-  is_fewshot: True
+  is_fewshot: False
 defaults:
   - _self_
-  - model: gpt-2
+  - model: vicuna
   - dataset: implicit_hate
   - prompt: defaults
 hydra:
