--- a/configs/defaults.yaml
+++ b/configs/defaults.yaml
@@ -3,10 +3,10 @@ basic:
   device_map: auto
   offload_folder: ./offload
   output_dir: results
-  is_fewshot: False
+  is_fewshot: True
 defaults:
   - _self_
-  - model: vicuna
+  - model: gpt-2
   - dataset: offenseval_implicit
   - prompt: defaults
 hydra:
