--- a/requirements.txt
+++ b/requirements.txt
@@ -5,67 +5,74 @@ aiosignal==1.3.1
 annotated-types==0.7.0
 antlr4-python3-runtime==4.9.3
 anyio==4.6.0
-appnope==0.1.4
-argon2-cffi==23.1.0
+appnope==0.1.3
+argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
 arrow==1.3.0
-asttokens==2.4.1
+asttokens==2.0.5
 async-lru==2.0.4
-attrs==24.2.0
-babel==2.16.0
+attrs==23.1.0
+Babel==2.11.0
 beautifulsoup4==4.12.3
-bleach==6.1.0
+bleach==4.1.0
 Brotli==1.0.9
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.3.2
 click==8.1.7
-comm==0.2.2
+comm==0.2.1
+contourpy==1.3.0
+cycler==0.11.0
 datasets==3.0.1
-debugpy==1.8.6
+debugpy==1.6.7
 decorator==5.1.1
 defusedxml==0.7.1
 dill==0.3.8
+distro==1.9.0
 docker-pycreds==0.4.0
 executing==2.1.0
-fastjsonschema==2.20.0
+fastjsonschema==2.16.2
 filelock==3.13.1
+fonttools==4.51.0
 fqdn==1.5.1
 frozenlist==1.4.1
 fsspec==2024.6.1
 gitdb==4.0.11
 GitPython==3.1.43
 h11==0.14.0
-httpcore==1.0.6
+httpcore==1.0.2
 httpx==0.27.2
 huggingface-hub==0.25.1
 hydra-core==1.3.2
 idna==3.7
-ipykernel==6.29.5
+ipykernel==6.28.0
 ipython==8.28.0
 ipywidgets==8.1.5
 isoduration==20.11.0
 jedi==0.19.1
 Jinja2==3.1.4
+jiter==0.5.0
 joblib==1.4.2
 json5==0.9.25
 jsonpointer==3.0.0
 jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
+jsonschema-specifications==2023.7.1
 jupyter==1.1.1
 jupyter_client==8.6.3
 jupyter-console==6.6.3
 jupyter_core==5.7.2
 jupyter-events==0.10.0
-jupyter-lsp==2.2.5
+jupyter-lsp==2.2.0
 jupyter_server==2.14.2
-jupyter_server_terminals==0.5.3
+jupyter_server_terminals==0.4.4
 jupyterlab==4.2.5
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.13
+kiwisolver==1.4.4
 MarkupSafe==2.1.3
-matplotlib-inline==0.1.7
+matplotlib==3.9.2
+matplotlib-inline==0.1.6
 mistune==3.0.2
 mpmath==1.3.0
 multidict==6.1.0
@@ -75,37 +82,40 @@ nbconvert==7.16.4
 nbformat==5.10.4
 nest-asyncio==1.6.0
 networkx==3.2.1
+nltk==3.9.1
 notebook==7.2.2
-notebook_shim==0.2.4
-numpy==2.1.1
+notebook_shim==0.2.3
+numpy==2.0.1
 omegaconf==2.3.0
+openai==0.28.0
 overrides==7.7.0
 packaging==24.1
 pandas==2.2.3
-pandocfilters==1.5.1
+pandocfilters==1.5.0
 parso==0.8.4
 pexpect==4.9.0
 pillow==10.4.0
 pip==24.2
-platformdirs==4.3.6
+platformdirs==3.10.0
 prometheus_client==0.21.0
-prompt_toolkit==3.0.48
+prompt-toolkit==3.0.43
 protobuf==5.28.2
-psutil==6.0.0
+psutil==5.9.0
 ptyprocess==0.7.0
-pure_eval==0.2.3
+pure-eval==0.2.2
 pyarrow==17.0.0
-pycparser==2.22
+pycparser==2.21
 pydantic==2.9.2
 pydantic_core==2.23.4
 pydantic-settings==2.5.2
-Pygments==2.18.0
+Pygments==2.15.1
+pyparsing==3.1.2
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
 python-decouple==3.8
 python-dotenv==1.0.1
 python-json-logger==2.0.7
-pytz==2024.2
+pytz==2024.1
 PyYAML==6.0.1
 pyzmq==26.2.0
 referencing==0.35.1
@@ -113,7 +123,7 @@ regex==2024.9.11
 requests==2.32.3
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
-rpds-py==0.20.0
+rpds-py==0.10.6
 safetensors==0.4.5
 scikit-learn==1.5.2
 scipy==1.14.1
@@ -125,15 +135,15 @@ six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
 soupsieve==2.6
-stack-data==0.6.3
+stack-data==0.2.0
 sympy==1.13.2
-terminado==0.18.1
+terminado==0.17.1
 threadpoolctl==3.5.0
-tinycss2==1.3.0
+tinycss2==1.2.1
 tokenizers==0.20.0
-torch==2.4.1
-torchaudio==2.4.1
-torchvision==0.19.1
+torch==2.5.0
+torchaudio==2.5.0
+torchvision==0.20.0
 tornado==6.4.1
 tqdm==4.66.5
 traitlets==5.14.3
@@ -141,6 +151,7 @@ transformers==4.45.1
 types-python-dateutil==2.9.0.20241003
 typing_extensions==4.11.0
 tzdata==2024.2
+unicodedata2==15.1.0
 uri-template==1.3.0
 urllib3==2.2.3
 wandb==0.18.3
